@@ -69,7 +69,7 @@ wait_ldns_testns_up fwd3.log
 
 # stop unbound to flush the cachedb cache
 echo "> stop unbound"
-kill_pid `cat unbound.pid`
+kill_from_pidfile "unbound.pid"
 
 echo ""
 echo "> config unbound with cachedb-no-store: yes"
