@@ -3,6 +3,8 @@
 	- iana portlist update.
 	- Updated IPv4 and IPv6 address for b.root-servers.net in root hints.
 	- Update test script file common.sh.
+	- Fix tests to use new common.sh functions, wait_logfile and
+	  kill_from_pidfile.
 
 5 December 2023: Wouter
 	- Merge #971: fix 'WARNING: Message has 41 extra bytes at end'.
